[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/LogInPanel.gd" type="Script" id=1]

[node name="LogInPanel" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = -63.5
margin_right = 181.5
margin_bottom = 63.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = -33.0
margin_right = 54.5
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeText" type="Label" parent="GridContainer"]
margin_right = 109.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter your name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="GridContainer"]
margin_top = 18.0
margin_right = 109.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogInButton" type="Button" parent="GridContainer"]
margin_left = 29.0
margin_top = 46.0
margin_right = 79.0
margin_bottom = 66.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Log in"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GridContainer/LogInButton" to="." method="_on_LogInButton_pressed"]
